--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,10 @@ project(costumeconverter VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(costumeconverter main.cpp Bin2TextConverter.cpp)
+add_executable(costumeconverter 
+	src/main.cpp 
+	src/Bin2TextConverter.cpp
+)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
