Added option to convert from and to XML file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,12 @@ project(costumeconverter VERSION 0.1.0)
 
 
 add_executable(costumeconverter 
+	src/pugixml/pugixml.cpp
 	src/main.cpp 
 	src/Bin2TextConverter.cpp
 	src/Text2BinConverter.cpp
+	src/Bin2XmlConverter.cpp
+	src/Xml2BinConverter.cpp
 )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
