--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(costumeconverter VERSION 0.1.0)
+project(costumeconverter VERSION 1.0.0)
 
+SET (PROJECT_CREATOR "shepher")
+configure_file (
+	"${CMAKE_CURRENT_SOURCE_DIR}/config.h.in" 
+	"${CMAKE_CURRENT_SOURCE_DIR}/src/config.h"
+)
 
 add_executable(costumeconverter 
 	src/pugixml/pugixml.cpp
